style.css
body {
    /* Set line height to 1.5 times the font size
                and use the OS's UI font as the website font
                */
    font: 100%/1.5 system-ui;
    max-width: 100ch;
    margin-inline: auto;
    padding: 3ch;
}
.profile-photo {
    /* Resize profile photo
    */
    display: block;
    width: 200px;
    max-width: 80%;
    height: auto;
}
nav ul {display: contents;}
nav li {display: contents;}
nav {
    display: flex;
    margin-bottom: 1em;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    --border-color: oklch(50% 10% 200 / 40%);
    border-bottom-color: var(--border-color);
    padding-top: 3rem;
}
a.link:hover {
    text-decoration: underline;
}
nav a {
    flex: 1;
    text-align: center;
    text-decoration: none;
    color: inherit;
    padding: 0.5em;
}
nav a.current {
    font-weight: bold;
    border-bottom: 0.4em solid oklch(80% 3% 200);
    padding-bottom: 0.1em;
}
:root {
    --color-accent: oklch(65% 50% 0);
    accent-color: var(--color-accent);
}
nav a:hover {
    border-bottom: 0.4em solid var(--color-accent);
    padding-bottom: 0.1em;
    background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
}
form {
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 1em;
}
input, textarea, button, select {
    font: inherit;
}
label, button {
    /*Only argument that works for button here is grid-col
        so everything else is fine to keep here and does not
        mess up the button
    */
    grid-column: 1 / -1;
    display: grid;
    grid-template-columns: subgrid;
}
.projects {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
    gap: 1rem;
}
.projects article {
    display: grid;
    grid-template-rows: subgrid;
    grid-row: span 3;
    gap: 1em;
    margin: 0;
}
.projects article h2 {
    margin: 0;
}
h1 {
    font-size: 400%;
}
h1, h2, h3, h4, h5, h6 {
    line-height: 1.1;
    text-wrap: balance;
}
section {
    border-top: 1px solid oklch(80% 3% 200);
    padding-top: 1em;
    margin-block: 1.5em;
}
section article p, 
section article ul {
    margin-block: 0.25em;
}
section h2 {
    color: var(--color-accent);
    margin-bottom: 0.5em;
}
.color-scheme {
    position: absolute;
    top: 1rem;
    right: 1rem;
    font-size: 80%;
}
#profile-stats dl {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}
#profile-stats dt {
    grid-row: 1;
    font-weight: bold;
}
#profile-stats dd{
    grid-row: 2;
    margin: 0;
}
.projects img {
    width: 100%;
    aspect-ratio: 16/9;
    object-fit: contain;
    background-color: white;
}
.projects year {
    font-family: Baskerville;
    font-variant-numeric: oldstyle-nums;
}
#projects-pie-plot {
    max-width: 20em;
    margin-block: 2em;
    overflow: visible;
}
.projects article > div {
    display: flex;
    flex-direction: column;
}
.projects article > div p:first-of-type {
    flex: 1;
}
.swatch {
    display: inline-block;
    width: 1em;
    aspect-ratio: 1/1;
    background-color: var(--color);
    border-radius: 50%;
}
.legend-item {
    display: flex;
    align-items: center;
    gap: 0.5em;
}
.legend {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(9em, 1fr));
    gap: 1em;
    padding: 1em;
    border: 1px solid oklch(80% 3% 200);
    margin: 1em;
    list-style: none;
    flex: 1;
}
.container {
    display: flex;
    align-items: center;
    gap: 2em;
}

